--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>Your title here</title>
+    <title>Sibyl Huifeng Sun</title>
     <meta name="description" content="A brief description of your site for search engines">
     <meta name="author" content="Information about the author here">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
@@ -29,7 +29,7 @@
 
     <header id="header">
       <img src="logo.jpg">
-      <h1>Simple Website</h1>
+      <h1>Sibyl Huifeng Sun</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
@@ -53,7 +53,7 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Sed tempus urna et pharetra pharetra massa massa ultricies. Porttitor rhoncus dolor purus non enim praesent. Id aliquet risus feugiat in ante metus dictum. 
+              Welcome to my personal website! I'm [Your Name], a passionate data scientist dedicated to unraveling insights from complex datasets. 
             </p>
           </div>
           
