--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <body>
     <h1>Sign Up for Our Study</h1>
     <p>Please choose how you'd like to sign up:</p>
-    <a href="https://sona-systems.com" class="button">Sign up on SONA</a>
-    <a href="ziliang.xiong@donders.ru.nl" class="button">Email First Contact</a>
-    <a href="wendy.pletu@donders.ru.nl" class="button">Email Second Contact</a>
+    <a href="https://radboud.sona-systems.com/default.aspx?p_return_experiment_id=13231" class="button">Sign up on this SONA link if you are a female</a>
+    <a href="https://radboud.sona-systems.com/default.aspx?p_return_experiment_id=13230" class="button">Sign up on this SONA link if you are a male</a>
+    <a href="ziliang.xiong@donders.ru.nl" class="button">Email Contact</a>
 </body>
 </html>
 
